--- a/templates/about.html
+++ b/templates/about.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 
 {% block page_content %}
-    <h1>Hello, World!</h1>
+    <div> 
+        
+    </div>
 {% endblock page_content %}
