--- a/templates/base.html
+++ b/templates/base.html
@@ -1,14 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="utf-8">
-    <title>{% block title %} Jaloliddin Murodullayev {% endblock title %}</title>
-    <link
-        href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
-        rel="stylesheet"
-    >
-</head>
-<body class="container">
-{% block page_content %}{% endblock page_content %}
-</body>
+    <head>
+        <meta charset="utf-8">
+        <title>{% block title %} Jaloliddin Murodullayev {% endblock title %}</title>
+        <link
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
+            rel="stylesheet"
+        >
+    </head>
+    <body class="container">
+
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <a class="navbar-brand ms-1" href="#">JMTECH</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+              <ul class="navbar-nav ms-auto">
+                <li class="nav-item active">
+                  <a class="nav-link" href="#">Home<span class="sr-only"></span></a> 
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Blog</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Resume</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Follow</a>
+                </li>
+              </ul>
+            </div>
+        </nav>
+
+        {% block page_content %}{% endblock page_content %}
+    </body>
 </html>
