--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,7 @@
     </head>
     <body class="container">
 
-        <nav class="rounded navbar navbar-expand-lg navbar-light bg-light mt-3">
+        <nav class="rounded navbar navbar-expand-lg navbar-light bg-light p-3 mt-3">
             <a class="navbar-brand ms-1" href="#">JMTECH</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
