--- a/templates/about.html
+++ b/templates/about.html
@@ -1,7 +1,9 @@
 {% extends "base.html" %}
 
 {% block page_content %}
-    <div> 
-        
+    <div class="p-1 mt-1"> 
+        <div class="p-1 mt-9 ms-1"> 
+            <h1> Personal website </h1>
+        </div>
     </div>
 {% endblock page_content %}
