--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,7 @@
     </head>
     <body class="container">
 
-        <nav class="rounded navbar navbar-expand-lg navbar-light bg-light p-3 mt-3">
+        <nav class="rounded navbar navbar-expand-lg navbar-light bg-light p-3 mt-2">
             <a class="navbar-brand ms-1" href="#">JMTECH</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
@@ -18,16 +18,16 @@
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav ms-auto">
                 <li class="nav-item active">
-                  <a class="nav-link" href="#">Home<span class="sr-only"></span></a> 
+                  <a class="nav-link" href="">Home<span class="sr-only"></span></a> 
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Blog</a>
+                  <a class="nav-link" href="">Blog</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Resume</a>
+                  <a class="nav-link" href="">Resume</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Follow</a>
+                  <a class="nav-link" href="">Follow</a>
                 </li>
               </ul>
             </div>
