--- a/templates/about.html
+++ b/templates/about.html
@@ -2,8 +2,34 @@
 
 {% block page_content %}
     <div class="p-1 mt-1"> 
-        <div class="p-1 mt-9 ms-1"> 
-            <h1> Personal website </h1>
+        <div class="row">
+            <div class="col-md-3">
+                <div class="rounded p-3">
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="rounded p-3">
+                            <img src="https://www.pngitem.com/pimgs/m/595-5952790_140-x-140-pixels-hd-png-download.png" alt="Italian Trulli" class="rounded-circle mt-4", style="width: 150px; height: 150px;">
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="rounded p-5">
+                            <h3 class="no-wrap"> Jaloliddin Murodullayev </h3>
+                            <p class="no-wrap lead"> Software Engineer </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="rounded p-3">
+                </div>
+            </div>
         </div>
+        {% comment %} <div class="p-1 mt-9 ms-1"> 
+            <img src="https://i.pinimg.com/564x/25/95/35/259535a6b5c0cbce523d67297cd9f331.jpg" alt="Italian Trulli" class="rounded-circle mt-4">
+            <h1> Personal website </h1>
+        </div> {% endcomment %}
     </div>
 {% endblock page_content %}
