--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,11 @@
             href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
             rel="stylesheet"
         >
+        <style>
+          .no-wrap {
+              white-space: nowrap;
+          }
+        </style>
     </head>
     <body class="container">
 
@@ -18,7 +23,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav ms-auto">
                 <li class="nav-item active">
-                  <a class="nav-link" href="">Home<span class="sr-only"></span></a> 
+                  <a class="nav-link" href="">Projects<span class="sr-only"></span></a> 
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="">Blog</a>
@@ -26,9 +31,9 @@
                 <li class="nav-item">
                   <a class="nav-link" href="">Resume</a>
                 </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="">Follow</a>
-                </li>
+                {% comment %} <li class="nav-item">
+                  <a class="nav-link" href="">Contact</a>
+                </li> {% endcomment %}
               </ul>
             </div>
         </nav>
