--- a/templates/base.html
+++ b/templates/base.html
@@ -23,7 +23,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav ms-auto">
                 <li class="nav-item active">
-                  <a class="nav-link" href="">Projects<span class="sr-only"></span></a> 
+                  <a class="nav-link" href="{% url 'projects_page' %}">Projects<span class="sr-only"></span></a> 
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="">Blog</a>
