--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,7 @@
     <body class="container">
 
         <nav class="rounded navbar navbar-expand-lg navbar-light bg-light p-3 mt-2">
-            <a class="navbar-brand ms-1" href="#">JMTECH</a>
+            <a class="navbar-brand ms-1" href="{% url 'home' %}">JMTECH</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
