--- a/templates/base.html
+++ b/templates/base.html
@@ -28,12 +28,12 @@
                 <li class="nav-item">
                   <a class="nav-link" href="">Blog</a>
                 </li>
-                <li class="nav-item">
+                <!-- <li class="nav-item">
                   <a class="nav-link" href="">Resume</a>
-                </li>
-                {% comment %} <li class="nav-item">
-                  <a class="nav-link" href="">Contact</a>
-                </li> {% endcomment %}
+                </li> -->
+                 <li class="nav-item">
+                  <a class="nav-link" href="{% url 'contact_page' %}">Contact</a>
+                </li> 
               </ul>
             </div>
         </nav>
