--- a/templates/resume.html
+++ b/templates/resume.html
@@ -4,78 +4,114 @@
 <div class="container mt-5">
     <div class="row">
         <div class="col-md-8 offset-md-2">
-            <h1 class="text-center">Your Name</h1>
-            <p class="text-center">Your Job Title | Location</p>
+            <h1 class="text-center">Jaloliddin Murodullaev</h1>
+            <p class="text-center">Software engineer | Tashkent, Uzbekistan</p>
             <hr>
 
             <div class="mb-4">
-                <h3>Contact Information</h3>
-                <p>Email: <a href="mailto:youremail@example.com">youremail@example.com</a></p>
-                <p>Phone: +1234567890</p>
-                <p>LinkedIn: <a href="https://linkedin.com/in/yourprofile" target="_blank">linkedin.com/in/yourprofile</a></p>
-                <p>GitHub: <a href="https://github.com/yourprofile" target="_blank">github.com/yourprofile</a></p>
-            </div>
-
-            <div class="mb-4">
                 <h3>Summary</h3>
-                <p>A brief summary about your professional background, skills, and goals.</p>
+                <p>A passionate software engineer focusing on backend.</p>
             </div>
 
-            <div class="mb-4">
-                <h3>Skills</h3>
-                <ul>
-                    <li>Skill 1</li>
-                    <li>Skill 2</li>
-                    <li>Skill 3</li>
-                    <li>Skill 4</li>
-                    <li>Skill 5</li>
-                </ul>
-            </div>
+            <hr class="my-3">
 
             <div class="mb-4">
                 <h3>Experience</h3>
                 <div class="mb-2">
-                    <h5>Job Title - Company Name</h5>
-                    <p><strong>Location</strong> | Month Year - Present</p>
-                    <p>Describe your responsibilities and achievements in this position.</p>
+                    <h5>Backend engineer - Easybooking</h5>
+                    <p><strong>Tashkent</strong> | Apr 2023 - Oct 2024 (1 year 6 months)</p>
+                    <ul>
+                        <li>Participated in developing a B2B system in travel.</li>
+                        <li>Created core functionalities of the system.</li>
+                    </ul>
                 </div>
                 <div class="mb-2">
-                    <h5>Previous Job Title - Previous Company Name</h5>
-                    <p><strong>Location</strong> | Month Year - Month Year</p>
-                    <p>Describe your responsibilities and achievements in this position.</p>
+                    <h5>Backend engineer - DK-Klub</h5>
+                    <p><strong>Samarkand</strong> | Jun 2022 - Apr 2023 (11 months)</p>
+                    <ul>
+                        <li>Developed several websites for local businesses and agencies.</li>
+                    </ul>
                 </div>
                 <!-- Add more experiences as needed -->
             </div>
 
+            <hr class="my-3">
+
             <div class="mb-4">
                 <h3>Education</h3>
                 <div class="mb-2">
-                    <h5>Degree - University Name</h5>
-                    <p><strong>Location</strong> | Month Year - Month Year</p>
-                    <p>Any additional details or honors received.</p>
+                    <h5>Bachelor - Tashkent university of information technologies</h5>
+                    <p><strong>Samarkand</strong> | Sep 2019 - May 2023</p>
+                    <ul>
+                        <li>Majoring software engineering.</li>
+                    </ul>
                 </div>
                 <!-- Add more education details as needed -->
             </div>
 
+            <hr class="my-3">
+
             <div class="mb-4">
                 <h3>Projects</h3>
                 <div class="mb-2">
-                    <h5>Project Title</h5>
-                    <p>A brief description of the project, technologies used, and your role.</p>
+                    <h5>JMTECH</h5>
+                    <ul>
+                        <li>Personal website for sharing my thoughts and experience.</li>
+                    </ul>
                 </div>
                 <!-- Add more projects as needed -->
             </div>
 
+            <hr class="my-3">
+
             <div class="mb-4">
-                <h3>Certifications</h3>
+                <h3>Achievements</h3>
                 <ul>
-                    <li>Certification Name - Issuing Organization</li>
-                    <li>Certification Name - Issuing Organization</li>
+                    <li>ICPC semi-finalist - ICPC global</li>
+                    <li>ICPC bronze medals - ICPC global</li>
+                </ul>
+            </div>
+
+            <hr class="my-3">
+
+            <div class="mb-4">
+                <h3>Skills</h3>
+                <ul>
+                    <li>Python</li>
+                    <li>Django/Flask/Tornado/FastApi</li>
+                    <li>SQL/MySql/Postres</li>
+                    <li>Docker</li>
+                    <li>Git/Github</li>
+                    <li>GCP/Azure</li>
+                    <li>Caching/Redis</li>
+                    <li>Celery</li>
+                    <li>RabbitMQ</li>
                 </ul>
             </div>
             
-            <div class="text-center mt-4"></div>
+
+            <!-- <div class="mb-10"></div>
+                <h3>Social Profiles</h3>
+                <div class="d-flex flex-wrap">
+                    <div class="me-3">
+                        <p><a href="https://www.linkedin.com/in/jaloliddinmurodullayev/" target="_blank">LinkedIn</a></p>
+                    </div>
+                    <div class="me-3">
+                        <p>|</p>
+                    </div>
+                    <div class="me-3">
+                        <p><a href="https://github.com/jaloliddinmurodullaev" target="_blank">GitHub</a></p>
+                    </div>
+                </div>
+            </div> -->
+
+            </div>
+
+            <div class="mb-40 text-center py-3">
                 <a href="{% url 'download_resume' %}" class="btn btn-success">Download Resume</a>
+            </div>
+
+            <div class="mb-40 text-center py-3">
             </div>
         </div>
     </div>
