--- a/templates/about.html
+++ b/templates/about.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block page_content %}
-    <div class="p-1 mt-1"> 
+    <!-- <div class="p-1 mt-1"> 
         <div class="row">
             <div class="col-md-3">
                 <div class="rounded p-3">
@@ -18,6 +18,25 @@
                         <div class="rounded p-5">
                             <h3 class="no-wrap"> Jaloliddin Murodullayev </h3>
                             <p class="no-wrap lead"> Software Engineer </p>
+                            <ul class="flex-row">
+                                <li class="nav-item">
+                                    <a class="nav-link px-2" href="#!">
+                                      <i class="fab fa-instagram"></i>
+                                    </a>
+                                  </li>
+                                <li class="nav-item">
+                                    <a class="nav-link ps-2" href="#!">
+                                      <i class="fab fa-youtube"></i>
+                                    </a>
+                                </li>
+                            </ul>
+                            <div class="container">
+                                <div class="row">
+                                    <div class="col">Item 4</div>
+                                    <div class="col">Item 5</div>
+                                    <div class="col">Item 6</div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -27,9 +46,37 @@
                 </div>
             </div>
         </div>
-        {% comment %} <div class="p-1 mt-9 ms-1"> 
-            <img src="https://i.pinimg.com/564x/25/95/35/259535a6b5c0cbce523d67297cd9f331.jpg" alt="Italian Trulli" class="rounded-circle mt-4">
-            <h1> Personal website </h1>
-        </div> {% endcomment %}
+    </div> -->
+
+    <div class="container d-flex justify-content-center">
+        <div class="row d-flex align-items-center">
+            <!-- Image Div -->
+            <!-- <div class="col-auto">
+                <img src="https://www.pngitem.com/pimgs/m/595-5952790_140-x-140-pixels-hd-png-download.png" alt="Italian Trulli" class="rounded-circle mt-4", style="width: 220px; height: 220px;">
+            </div> -->
+    
+            <!-- Info Div -->
+            <!-- <div class="justify-content-center align-items-center profile-info mt-5"> -->
+                <div class="d-flex flex-column align-items-center profile-info mt-5">
+                <img src="https://img.freepik.com/free-photo/view-3d-man-holding-laptop_23-2150709818.jpg?size=626&ext=jpg" alt="Italian Trulli" class="rounded-circle mt-3", style="width: 220px; height: 220px;">
+                <h2 class="justify-content-center mt-3">Jaloliddin Murodullaev</h2>
+                <p class="no-wrap lead">Software Engineer</p>
+                <p class="no-wrap lead">
+                    I write about my experience in tech world. 
+                </p>
+                <div class="social-links mt-3">
+                    <a href="https://linkedin.com/in/yourprofile" target="_blank" class="me-3">
+                        <i class="fab fa-linkedin fa-2x"></i>
+                    </a> 
+                    <a href="https://linkedin.com/in/yourprofile" target="_blank" class="me-3">
+                        <i class="fab fa-github fa-2x"></i>
+                    </a> 
+                    <a href="https://linkedin.com/in/yourprofile" target="_blank" class="me-3">
+                        <i class="fab fa-twitter fa-2x"></i>
+                    </a> 
+                </div>
+            </div>
+        </div>
     </div>
+    
 {% endblock page_content %}
