Contact Page updated, Blogs Page updated

--- a/templates/about.html
+++ b/templates/about.html
@@ -65,13 +65,13 @@
                     I write about my experience in tech world. 
                 </p>
                 <div class="social-links mt-3">
-                    <a href="https://linkedin.com/in/yourprofile" target="_blank" class="me-3">
+                    <a href="https://linkedin.com/in/yourprofile" target="_blank" class="me-3 text-decoration-none">
                         <i class="fab fa-linkedin fa-2x"></i>
                     </a> 
-                    <a href="https://linkedin.com/in/yourprofile" target="_blank" class="me-3">
+                    <a href="https://linkedin.com/in/yourprofile" target="_blank" class="me-3 text-decoration-none">
                         <i class="fab fa-github fa-2x"></i>
                     </a> 
-                    <a href="https://linkedin.com/in/yourprofile" target="_blank" class="me-3">
+                    <a href="https://linkedin.com/in/yourprofile" target="_blank" class="me-3 text-decoration-none">
                         <i class="fab fa-twitter fa-2x"></i>
                     </a> 
                 </div>
