--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,25 +1,29 @@
 {% extends "base.html" %}
 
 {% block page_content %}
-<div class="row justify-content-center mt-5">
-    <div class="col-md-8">
-        <h2 class="text-center">Contact Me</h2>
-        <form method="POST" action="">
-            {% csrf_token %}
-            <div class="form-group">
-                <label for="id_name">Your Name</label>
-                {{ form.name }}
-            </div>
-            <div class="form-group">
-                <label for="id_email">Your Email</label>
-                {{ form.email }}
-            </div>
-            <div class="form-group">
-                <label for="id_message">Your Message</label>
-                {{ form.message }}
-            </div>
-            <button type="submit" class="btn btn-primary btn-block">Send Message</button>
-        </form>
+<div class="container mt-5">
+    <div class="row">
+        <div class="col-md-8 offset-md-2">
+            <h2 class="text-center">Contact Me</h2>
+            <form method="POST" action="">
+                {% csrf_token %}
+                <div class="form-group mt-4">
+                    <label for="id_name">Name</label>
+                    {{ form.name }}
+                </div>
+                <div class="form-group mt-4">
+                    <label for="id_email">Email</label>
+                    {{ form.email }}
+                </div>
+                <div class="form-group mt-4">
+                    <label for="id_message">Message</label>
+                    {{ form.message }}
+                </div>
+                <div class="d-flex justify-content-center align-items-center mt-4">
+                    <button type="submit" class="btn btn-primary btn-block">Send Message</button>
+                </div>
+            </form>
+        </div>
     </div>
 </div>
 {% endblock %}
