Updates on HTML pages

--- a/templates/blog.html
+++ b/templates/blog.html
@@ -8,15 +8,17 @@
         <div class="row">
             <div class="col-md-8 offset-md-2">
                 <h1 class="text-center">Articles</h1>
-                <hr class="mb-4 mt-5">
+                <hr class="mb-3 mt-5">
                 <div>
                     {% for blog in blogs %}
-                        <a href="{% url 'blog_detail_page' blog.id %}" class="list-group-item list-group-item-action">
-                            <h4 class="mb-1">{{ blog.title }}</h4>
-                            <small class="text-muted">{{ blog.created_at|date:"F j, Y" }}</small>
-                            <p class="mb-1">{{ blog.desctiption|truncatewords:20 }}</p>
-                        </a>
-                        <hr class="mb-4 mt-4">
+                        <div class="p-3">
+                            <a href="{% url 'blog_detail_page' blog.id %}" class="list-group-item list-group-item-action">
+                                <h4 class="mb-1">{{ blog.title }}</h4>
+                                <small class="text-muted">{{ blog.created_at|date:"F j, Y" }}</small>
+                                <p class="mb-1">{{ blog.desctiption|truncatewords:20 }}</p>
+                            </a>
+                        </div>
+                        <hr class="mb-2 mt-1">
                     {% endfor %}
                 </div>
             </div>
