--- a/templates/base.html
+++ b/templates/base.html
@@ -21,6 +21,10 @@
             font-weight: 700;
             letter-spacing: 0;
           }
+          .long-arrow {
+            font-size: 1.3em; /* Increase size */
+          }
+
         </style>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
