--- a/templates/contact.html
+++ b/templates/contact.html
@@ -8,7 +8,7 @@
             <form method="POST" action="">
                 {% csrf_token %}
                 <div class="form-group mt-4">
-                    <label for="id_name">Name</label>
+                    <label for="id_name">Full Name</label>
                     {{ form.name }}
                 </div>
                 <div class="form-group mt-4">
