--- a/templates/blog_detail.html
+++ b/templates/blog_detail.html
@@ -1,39 +1,43 @@
 <!-- blog_detail.html -->
 {% extends 'base.html' %}
 
-{% block title %} {{ blog.title }} {% endblock %}
-
 {% block page_content %}
-    <!-- Go Back Button -->
-    <div class="mb-4">
-        <a href="javascript:history.back()" class="btn btn-secondary">&larr; Go Back</a>
-    </div>
-
-    <!-- Blog Title -->
-    <h1 class="mb-3">{{ blog.title }}</h1>
-
-    <!-- Blog Metadata -->
-    <p class="text-muted">Published on: {{ blog.created_at|date:"F j, Y" }}</p>
-
-    <!-- Blog Description -->
-    <div class="mb-4">
-        <h4>Description</h4>
-        <p>{{ blog.desctiption }}</p>
-    </div>
-
-    <!-- Blog Content -->
-    <div class="mb-4">
-        <h4>Content</h4>
-        <p>{{ blog.content }}</p>
-    </div>
-
-    <!-- Blog Likes and Views (Stats) -->
-    <div class="row">
-        <div class="col-md-6">
-            <p><strong>Likes:</strong> {{ blog.likes }}</p>
+    <div class="container">
+        <div class="mt-4">
+            <br>
         </div>
-        <div class="col-md-6">
-            <p><strong>Views:</strong> {{ blog.views }}</p>
+        <div class="row align-items-center">
+            <div class="col-md-2 text-left">
+                <a href="{% url 'blog_page' %}" class="btn btn-outline-secondary">
+                    <i class="fas fa-arrow-left long-arrow"></i>
+                </a>
+            </div>
+
+            <div class="col-md-8 text-center">
+                <h1>{{ blog.title }}</h1>
+                <p class="text-center"> <small class="text-muted">{{ blog.created_at|date:"F j, Y" }}</small> </p>
+            </div>
+
+            <!-- <div class="col-md-2"></div> -->
         </div>
+
+        <div class="row mt-2">
+            <div class="col-md-8 offset-md-2">
+                <!-- <p class="text-center"> <small class="text-muted">{{ blog.created_at|date:"F j, Y" }}</small> </p> -->
+                <!-- <p class="text-center"> <strong> {{ blog.description }} </strong> </p> -->
+                <hr>
+                <div class="text-center md-5 p-4">
+                    <p>
+                        {{ blog.content | safe }}
+                    </p>
+                </div>
+                <hr>
+                <div class="text-center md-5 p-4">
+                    <p>
+                        <!-- Views: {{ blog.views }} -->
+                    </p>
+                </div>
+            </div>
+        </div> 
     </div>
 {% endblock %}
