--- a/templates/blog_detail.html
+++ b/templates/blog_detail.html
@@ -6,7 +6,7 @@
         <div class="mt-4">
             <br>
         </div>
-        <div class="row align-items-center">
+        <div class="row">
             <div class="col-md-2 text-left">
                 <a href="{% url 'blog_page' %}" class="btn btn-outline-secondary">
                     <i class="fas fa-arrow-left long-arrow"></i>
@@ -21,12 +21,12 @@
             <!-- <div class="col-md-2"></div> -->
         </div>
 
-        <div class="row mt-2">
+        <div class="row">
             <div class="col-md-8 offset-md-2">
                 <!-- <p class="text-center"> <small class="text-muted">{{ blog.created_at|date:"F j, Y" }}</small> </p> -->
                 <!-- <p class="text-center"> <strong> {{ blog.description }} </strong> </p> -->
                 <hr>
-                <div class="text-center md-5 p-4">
+                <div class="md-5 p-3">
                     <p>
                         {{ blog.content | safe }}
                     </p>
