--- a/templates/base.html
+++ b/templates/base.html
@@ -64,7 +64,7 @@
           {% endblock %}
       </div>
 
-      <footer class="text-center mt-auto py-3">
+      <footer class="text-center mt-auto py-3 pt-5">
             <p class="mb-0">&copy; {{ 2024 }} jaloliddin.com</p>
      </footer>
     </body>
