--- a/templates/base.html
+++ b/templates/base.html
@@ -56,7 +56,7 @@
               </ul>
             </div>
         </nav>
-        <hr>
+        <hr class="mt-1 mb-0">
 
       <div class="container">
           {% block page_content %}
