--- a/templates/resume.html
+++ b/templates/resume.html
@@ -107,9 +107,9 @@
 
             </div>
 
-            <div class="mb-40 text-center py-3">
+            <!-- <div class="mb-40 text-center py-3">
                 <a href="{% url 'download_resume' %}" class="btn btn-success">Download Resume</a>
-            </div>
+            </div> -->
 
             <div class="mb-40 text-center py-3">
             </div>
