--- a/templates/post_blog.html
+++ b/templates/post_blog.html
@@ -1,6 +1,8 @@
 <!-- markdown_post.html -->
 {% extends 'base.html' %}
 
+{% block title %}Post Blog | Jaloliddin's blog{% endblock %}
+
 {% block page_content %}
 <div class="container mt-5">
     <h1 class="text-center">Create a Markdown Post</h1>
