--- a/templates/projects.html
+++ b/templates/projects.html
@@ -1,10 +1,12 @@
 {% extends "base.html" %}
 
+{% block title %}Projects | Jaloliddin's blog{% endblock %}
+
 {% block page_content %}
 <div class="container mt-5">
     <div class="row">
         <div class="col-md-8 offset-md-2">
-            <h1 class="text-center">Personal Projects</h1>
+            <h2 class="text-center">Personal Projects</h2>
             <hr class="mb-3 mt-5">
             {% if projects|length > 0 %}
                 {% for project in projects %}
