--- a/templates/404.html
+++ b/templates/404.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
+{% block title %}Not found{% endblock %}
+
 {% block page_content %}
 <div class="container mt-5">
     <div class="text-center">
