--- a/templates/about.html
+++ b/templates/about.html
@@ -1,53 +1,8 @@
 {% extends "base.html" %}
 
-{% block page_content %}
-    <!-- <div class="p-1 mt-1"> 
-        <div class="row">
-            <div class="col-md-3">
-                <div class="rounded p-3">
-                </div>
-            </div>
-            <div class="col-md-3">
-                <div class="row">
-                    <div class="col-md-6">
-                        <div class="rounded p-3">
-                            <img src="https://www.pngitem.com/pimgs/m/595-5952790_140-x-140-pixels-hd-png-download.png" alt="Italian Trulli" class="rounded-circle mt-4", style="width: 150px; height: 150px;">
-                        </div>
-                    </div>
-                    <div class="col-md-6">
-                        <div class="rounded p-5">
-                            <h3 class="no-wrap"> Jaloliddin Murodullayev </h3>
-                            <p class="no-wrap lead"> Software Engineer </p>
-                            <ul class="flex-row">
-                                <li class="nav-item">
-                                    <a class="nav-link px-2" href="#!">
-                                      <i class="fab fa-instagram"></i>
-                                    </a>
-                                  </li>
-                                <li class="nav-item">
-                                    <a class="nav-link ps-2" href="#!">
-                                      <i class="fab fa-youtube"></i>
-                                    </a>
-                                </li>
-                            </ul>
-                            <div class="container">
-                                <div class="row">
-                                    <div class="col">Item 4</div>
-                                    <div class="col">Item 5</div>
-                                    <div class="col">Item 6</div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-3">
-                <div class="rounded p-3">
-                </div>
-            </div>
-        </div>
-    </div> -->
+{% block title %}About | Jaloliddin's blog{% endblock %}
 
+{% block page_content %}
     <div class="container d-flex justify-content-center">
         <div class="row d-flex align-items-center">
             <!-- Image Div -->
@@ -65,14 +20,14 @@
                     I write about my experience in tech world. 
                 </p>
                 <div class="social-links mt-3">
-                    <a href="https://linkedin.com/in/yourprofile" target="_blank" class="me-3 text-decoration-none">
+                    <a href="https://linkedin.com/in/jaloliddinmurodullayev" target="_blank" class="me-3 text-decoration-none">
                         <i class="fab fa-linkedin fa-2x"></i>
                     </a> 
-                    <a href="https://linkedin.com/in/yourprofile" target="_blank" class="me-3 text-decoration-none">
+                    <a href="https://github.com/jaloliddinmurodullaev" target="_blank" class="me-3 text-decoration-none">
                         <i class="fab fa-github fa-2x"></i>
                     </a> 
-                    <a href="https://linkedin.com/in/yourprofile" target="_blank" class="me-3 text-decoration-none">
-                        <i class="fab fa-twitter fa-2x"></i>
+                    <a href="https://t.me/jaloliddinmurodullaev" target="_blank" class="me-3 text-decoration-none">
+                        <i class="fab fa-telegram fa-2x"></i>
                     </a> 
                 </div>
             </div>
