--- a/templates/base.html
+++ b/templates/base.html
@@ -3,10 +3,9 @@
     <head>
         <meta charset="utf-8">
         <title>{% block title %} Jaloliddin Murodullayev {% endblock title %}</title>
-        <link
-            href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
-            rel="stylesheet"
-        >
+        <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
+        <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
         <style>
           .no-wrap {
               white-space: nowrap;
@@ -27,17 +26,17 @@
 
         </style>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     </head>
-    <body class="container d-flex flex-column min-vh-100">
+    <body class="container d-flex flex-column min-vh-100" style="max-width: 70%; margin: 0 auto;">
 
         <nav class="rounded navbar navbar-expand-lg navbar-light mt-2">
-            <a class="navbar-brand ms-1 logo" href="{% url 'home' %}"><strong>Jaloliddin's Blog</strong></a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <h2><a class="navbar-brand ms-1 logo" href="{% url 'home' %}">Jaloliddin's Blog</a></h2>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
-              <ul class="navbar-nav ms-auto">
+              <ul class="navbar-nav ms-auto align-items-end">
                 <li class="nav-item"></li>
                   <a class="nav-link" href="{% url 'blog_page' %}">Blog</a>
                 </li>
