--- a/templates/blog.html
+++ b/templates/blog.html
@@ -1,13 +1,13 @@
 <!-- blog_list.html -->
 {% extends 'base.html' %}
 
-{% block title %}Blog List{% endblock %}
+{% block title %}Blog | Jaloliddin's blog{% endblock %}
 
 {% block page_content %}
     <div class="container mt-5">
         <div class="row">
             <div class="col-md-8 offset-md-2">
-                <h1 class="text-center">Articles</h1>
+                <h2 class="text-center">Blog</h2>
                 <hr class="mb-3 mt-5">
                 <div>
                     {% if blogs|length > 0 %}
@@ -15,7 +15,7 @@
                         {% if blog.is_active %}
                         <div class="p-3">
                             <a href="{% url 'blog_detail_page' blog.id %}" class="list-group-item list-group-item-action">
-                                <h4 class="mb-1">{{ blog.title }}</h4>
+                                <h5 class="mb-1">{{ blog.title }}</h5>
                                 <small class="text-muted">{{ blog.created_at|date:"F j, Y" }}</small>
                                 <p class="mb-1 mt-2">{{ blog.description }}</p>
                             </a>
