--- a/templates/blog_detail.html
+++ b/templates/blog_detail.html
@@ -1,6 +1,8 @@
 <!-- blog_detail.html -->
 {% extends 'base.html' %}
 
+{% block title %}{{ blog.title }} | Jaloliddin's blog{% endblock %}
+
 {% block page_content %}
     <div class="container">
         <div class="mt-4">
@@ -8,13 +10,13 @@
         </div>
         <div class="row">
             <div class="col-md-2 text-left">
-                <a href="{% url 'blog_page' %}" class="btn btn-outline-secondary">
+                <!-- <a href="{% url 'blog_page' %}" class="btn btn-outline-secondary">
                     <i class="fas fa-arrow-left long-arrow"></i>
-                </a>
+                </a> -->
             </div>
 
             <div class="col-md-8 text-center">
-                <h1>{{ blog.title }}</h1>
+                <h2>{{ blog.title }}</h2>
                 <p class="text-center"> <small class="text-muted">{{ blog.created_at|date:"F j, Y" }}</small> </p>
             </div>
 
