--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 
+{% block title %}Contact | Jaloliddin's blog{% endblock %}
+
 {% block page_content %}
 <div class="container mt-5">
     <div class="row">
@@ -7,13 +9,19 @@
             <h2 class="text-center">Contact Me</h2>
             <form method="POST" action="">
                 {% csrf_token %}
-                <div class="form-group mt-4">
-                    <label for="id_name">Full Name</label>
-                    {{ form.name }}
-                </div>
-                <div class="form-group mt-4">
-                    <label for="id_email">Email</label>
-                    {{ form.email }}
+                <div class="row mb-4">
+                    <div class="col">
+                      <div data-mdb-input-init class="form-outline">
+                            <label class="form-label" for="id_name">Name</label>
+                            {{ form.name }}
+                      </div>
+                    </div>
+                    <div class="col">
+                      <div data-mdb-input-init class="form-outline">
+                            <label class="form-label" for="id_email">Email</label>
+                            {{ form.email }}
+                      </div>
+                    </div>
                 </div>
                 <div class="form-group mt-4">
                     <label for="id_message">Message</label>
