--- a/templates/contact_success.html
+++ b/templates/contact_success.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
+{% block title %}Contact | Jaloliddin's blog{% endblock %}
+
 {% block page_content %}
 <div class="container mt-5">
     <div class="row">
