--- a/templates/resume.html
+++ b/templates/resume.html
@@ -1,33 +1,39 @@
 {% extends 'base.html' %}
 
+{% block title %}Resume | Jaloliddin's blog{% endblock %}
+
 {% block page_content %}
 <div class="container mt-5">
     <div class="row">
         <div class="col-md-8 offset-md-2">
-            <h1 class="text-center">Jaloliddin Murodullaev</h1>
-            <p class="text-center">Software engineer | Tashkent, Uzbekistan</p>
-            <hr>
-
-            <div class="mb-4">
-                <h3>Summary</h3>
-                <p>A passionate software engineer focusing on backend.</p>
-            </div>
-
-            <hr class="my-3">
-
-            <div class="mb-4">
-                <h3>Experience</h3>
+            <h2 class="text-center">Resume</h2>
+            <hr class="mb-3 mt-5">
+            <h3 class="pt-2">Experience</h3>
+            <hr class="mb-3 mt-4">
+            <div class="mb-4 ps-3">
+                <!-- <hr class="my-3"> -->
                 <div class="mb-2">
-                    <h5>Backend engineer - Easybooking</h5>
-                    <p><strong>Tashkent</strong> | Apr 2023 - Oct 2024 (1 year 6 months)</p>
+                    <h5>Full-Stack developer - Examic</h5>
+                    <p><strong>Tashkent</strong> | Oct 2024 - Present</p>
+                    <ul>
+                        <li>Designed and developed the backend of the app.</li>
+                        <li>Designed and developed the frontend of the app.</li>
+                    </ul>
+                </div>
+                <hr class="my-3">
+                <div class="mb-2">
+                    <h5>Backend developer - Easybooking</h5>
+                    <p><strong>Tashkent</strong> | Apr 2023 - Oct 2024</p>
                     <ul>
                         <li>Participated in developing a B2B system in travel.</li>
                         <li>Created core functionalities of the system.</li>
+                        <li>Integrated several providers to the system.</li>
                     </ul>
                 </div>
+                <hr class="my-3">
                 <div class="mb-2">
-                    <h5>Backend engineer - DK-Klub</h5>
-                    <p><strong>Samarkand</strong> | Jun 2022 - Apr 2023 (11 months)</p>
+                    <h5>Backend developer - DK-Klub</h5>
+                    <p><strong>Samarkand</strong> | Jun 2022 - Apr 2023</p>
                     <ul>
                         <li>Developed several websites for local businesses and agencies.</li>
                     </ul>
@@ -37,8 +43,10 @@
 
             <hr class="my-3">
 
-            <div class="mb-4">
-                <h3>Education</h3>
+            <h3 class="pt-2">Education</h3>
+            <hr class="mb-3 mt-4">
+            <div class="mb-4 ps-3">
+                <!-- <hr class="my-3"> -->
                 <div class="mb-2">
                     <h5>Bachelor - Tashkent university of information technologies</h5>
                     <p><strong>Samarkand</strong> | Sep 2019 - May 2023</p>
@@ -51,12 +59,20 @@
 
             <hr class="my-3">
 
-            <div class="mb-4">
-                <h3>Projects</h3>
+            <h3 class="pt-2">Projects</h3>
+            <hr class="mb-3 mt-4">
+            <div class="mb-4 ps-3">
                 <div class="mb-2">
-                    <h5>JMTECH</h5>
+                    <h5>Jaloliddin's Blog | jaloliddin.com</h5>
                     <ul>
                         <li>Personal website for sharing my thoughts and experience.</li>
+                    </ul>
+                </div>
+                <hr class="my-3">
+                <div class="mb-2">
+                    <h5>Examic | examic.uz</h5>
+                    <ul>
+                        <li>Online test taker app for everyone.</li>
                     </ul>
                 </div>
                 <!-- Add more projects as needed -->
@@ -64,56 +80,42 @@
 
             <hr class="my-3">
 
-            <div class="mb-4">
-                <h3>Achievements</h3>
+            <h3 class="pt-2">Achievements</h3>
+            <div class="mb-4 ps-3">
                 <ul>
-                    <li>ICPC semi-finalist - ICPC global</li>
-                    <li>ICPC bronze medals - ICPC global</li>
+                    <li>Semi-finalist - ICPC global</li>
+                    <li>Bronze medals - ICPC Uzbekistan and Tajikistan</li>
                 </ul>
             </div>
 
             <hr class="my-3">
 
-            <div class="mb-4">
-                <h3>Skills</h3>
+            <h3 class="pt-2">Skills</h3>
+            <div class="mb-4 ps-3">
                 <ul>
-                    <li>Python</li>
-                    <li>Django/Flask/Tornado/FastApi</li>
-                    <li>SQL/MySql/Postres</li>
-                    <li>Docker</li>
-                    <li>Git/Github</li>
-                    <li>GCP/Azure</li>
-                    <li>Caching/Redis</li>
-                    <li>Celery</li>
-                    <li>RabbitMQ</li>
+                    <li>Python | Django | Flask | Tornado | FastAPI</li>
+                    <!-- <li>Golang | Gin</li> -->
+                    <li>HTML | CSS | JS</li>
+                    <li>SQL | Postresql</li>
+                    <!-- <li>NoSQL | MongoDB</li> -->
+                    <li>Git | Github | Gitlab | Bitbucket</li>
+                    <!-- <li>Cloud | GCP | AWS</li> -->
+                    <li>Caching | Redis</li>
+                    <li>Docker | Docker compose</li>
+                    <li>Linux | Ubuntu</li>
+                    <!-- <li>Nginx</li> -->
+                    <!-- <li>K8s</li> -->
+                    <!-- <li>Celery</li> -->
+                    <!-- <li>RabbitMQ</li> -->
+                    <!-- <li>and great communication indeed :)</li> -->
                 </ul>
             </div>
-            
 
-            <!-- <div class="mb-10"></div>
-                <h3>Social Profiles</h3>
-                <div class="d-flex flex-wrap">
-                    <div class="me-3">
-                        <p><a href="https://www.linkedin.com/in/jaloliddinmurodullayev/" target="_blank">LinkedIn</a></p>
-                    </div>
-                    <div class="me-3">
-                        <p>|</p>
-                    </div>
-                    <div class="me-3">
-                        <p><a href="https://github.com/jaloliddinmurodullaev" target="_blank">GitHub</a></p>
-                    </div>
-                </div>
-            </div> -->
-
-            </div>
-
-            <!-- <div class="mb-40 text-center py-3">
-                <a href="{% url 'download_resume' %}" class="btn btn-success">Download Resume</a>
-            </div> -->
-
-            <div class="mb-40 text-center py-3">
-            </div>
         </div>
+        
+        <!-- <div class="mb-40 text-center py-3">
+            <a href="{% url 'download_resume' %}" class="btn btn-primary">Download CV</a>
+        </div> -->
     </div>
 </div>
 {% endblock %}
