--- a/templates/contact_success.html
+++ b/templates/contact_success.html
@@ -9,9 +9,12 @@
             <div class="alert alert-success text-center" role="alert">
                 Thank you! Your message has been successfully sent.
             </div>
-            <div class="d-flex justify-content-center align-items-center mb-4">
-                <a href="{% url 'home' %}" class="btn btn-secondary">&larr; Back Home</a>
+            <div class="d-flex justify-content-center align-items-center mt-4">
+                <a href="{% url 'home' %}" class="btn btn-primary btn-block">&larr; Back Home</a>
             </div>
+            <!-- <div class="d-flex justify-content-center align-items-center mt-4">
+                <button type="submit" class="btn btn-primary btn-block">&</button>
+            </div> -->
         </div>
     </div>
 </div>
