--- a/templates/resume.html
+++ b/templates/resume.html
@@ -30,14 +30,6 @@
                         <li>Integrated several providers to the system.</li>
                     </ul>
                 </div>
-                <hr class="my-3">
-                <div class="mb-2">
-                    <h5>Backend developer - DK-Klub</h5>
-                    <p><strong>Samarkand</strong> | Jun 2022 - Apr 2023</p>
-                    <ul>
-                        <li>Developed several websites for local businesses and agencies.</li>
-                    </ul>
-                </div>
                 <!-- Add more experiences as needed -->
             </div>
 
@@ -72,7 +64,7 @@
                 <div class="mb-2">
                     <h5>Examic | examic.uz</h5>
                     <ul>
-                        <li>Online test taker app for everyone.</li>
+                        <li>Online test taker app.</li>
                     </ul>
                 </div>
                 <!-- Add more projects as needed -->
