--- a/templates/projects.html
+++ b/templates/projects.html
@@ -6,7 +6,7 @@
 <div class="container mt-5">
     <div class="row">
         <div class="col-md-8 offset-md-2">
-            <h2 class="text-center">Personal Projects</h2>
+            <h2 class="text-center">PROJECTS</h2>
             <hr class="mb-3 mt-5">
             {% if projects|length > 0 %}
                 {% for project in projects %}
