--- a/templates/blog.html
+++ b/templates/blog.html
@@ -7,7 +7,7 @@
     <div class="container mt-5">
         <div class="row">
             <div class="col-md-8 offset-md-2">
-                <h2 class="text-center">Blog</h2>
+                <h2 class="text-center">BLOG</h2>
                 <hr class="mb-3 mt-5">
                 <div>
                     {% if blogs|length > 0 %}
