--- a/templates/contact.html
+++ b/templates/contact.html
@@ -6,25 +6,26 @@
 <div class="container mt-5">
     <div class="row">
         <div class="col-md-8 offset-md-2">
-            <h2 class="text-center">Contact Me</h2>
+            <h2 class="text-center">CONTACT</h2>
+            <br class="mb-3 mt-5">
             <form method="POST" action="">
                 {% csrf_token %}
                 <div class="row mb-4">
                     <div class="col">
                       <div data-mdb-input-init class="form-outline">
-                            <label class="form-label" for="id_name">Name</label>
+                            <!-- <label class="form-label" for="id_name">Name</label> -->
                             {{ form.name }}
                       </div>
                     </div>
                     <div class="col">
                       <div data-mdb-input-init class="form-outline">
-                            <label class="form-label" for="id_email">Email</label>
+                            <!-- <label class="form-label" for="id_email">Email</label> -->
                             {{ form.email }}
                       </div>
                     </div>
                 </div>
                 <div class="form-group mt-4">
-                    <label for="id_message">Message</label>
+                    <!-- <label for="id_message">Message</label> -->
                     {{ form.message }}
                 </div>
                 <div class="d-flex justify-content-center align-items-center mt-4">
