--- a/templates/resume.html
+++ b/templates/resume.html
@@ -6,7 +6,7 @@
 <div class="container mt-5">
     <div class="row">
         <div class="col-md-8 offset-md-2">
-            <h2 class="text-center">Resume</h2>
+            <h2 class="text-center">RÉSUMÉ</h2>
             <hr class="mb-3 mt-5">
             <h3 class="pt-2">Experience</h3>
             <hr class="mb-3 mt-4">
